# sample-cli-application

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: cli.rs  unit.rs
