[package]
name = "grrs"
version = "0.1.0"
authors = ["Prabhav Khera <prabhavkhera@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/probro27/sample-cli-application"
repository = "https://github.com/probro27/sample-cli-application"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
assert_fs = "1.0.10"
